--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,7 @@
             android:id="@+id/selectImage2"
             android:layout_width="240dp"
             android:layout_height="218dp"
+            android:rotationY="180"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
